// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Helpers should attempt to apply a Joi schema to a response: schemaResponse, camelCasing 1`] = `
Object {
  "loremIpsum": "dolor_sit",
}
`;

exports[`Service Helpers should attempt to apply a Joi schema to a response: schemaResponse, parameters 1`] = `
Array [
  Array [
    Object {
      "lorem_ipsum": "dolor_sit",
    },
    Object {
      "convert": true,
    },
  ],
]
`;

exports[`Service Helpers should have specific functions: serviceHelpers 1`] = `
Object {
  "camelCase": [Function],
  "responseNormalize": [Function],
  "schemaResponse": [Function],
}
`;

exports[`Service Helpers should support applying a normalize function for schemas: responseNormalize, success 1`] = `
Array [
  Array [
    Object {
      "hello": "world",
    },
  ],
]
`;

exports[`Service Helpers should support camel casing obj keys: camelCase 1`] = `
Object {
  "loremIpsum": Array [
    Object {
      "dolorSit": Array [
        Object {
          "helloWorld": 1,
        },
      ],
    },
  ],
}
`;
